--- a/packages/plugin-uploader/package.json
+++ b/packages/plugin-uploader/package.json
@@ -10,8 +10,10 @@
     "node": ">=16"
   },
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "start": "pnpm build --watch",
-    "build": "pnpm clean && tsc --build --force",
+    "prebuild": "pnpm clean",
+    "build": "tsc --build --force",
     "clean": "rimraf dist",
     "lint": "eslint 'src/**/*.ts' 'bin/*.js'",
     "fix": "pnpm lint --fix",
