--- a/packages/plugin-packer/package.json
+++ b/packages/plugin-packer/package.json
@@ -20,14 +20,17 @@
     "from-manifest.js"
   ],
   "scripts": {
-    "build": "pnpm clean && tsc --build --force",
+    "preinstall": "npx only-allow pnpm",
+    "prebuild": "pnpm clean",
+    "build": "tsc --build --force",
+    "postbuild": "run-p js css",
     "clean": "rimraf dist",
     "lint": "eslint \"*.{js,ts}\" bin src site test",
     "fix": "pnpm lint --fix",
     "test": "run-p jest site:test",
     "test:ci": "pnpm test",
     "build:dev": "tsc --build --force --watch",
-    "css": "postcss --config postcss.config.js ../../node_modules/normalize.css/normalize.css > docs/dist/normalize.min.css",
+    "css": "postcss --config postcss.config.js ./node_modules/normalize.css/normalize.css > docs/dist/normalize.min.css",
     "js": "webpack --mode production",
     "js:dev": "webpack serve --mode development",
     "jest": "jest",
