build: refix script in package.json

--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "prebuild": "pnpm -r --parallel run prebuild",
     "build": "pnpm prebuild && tsc --build packages --force && pnpm postbuild",
     "postbuild": "pnpm -r --parallel run postbuild",
-    "lint": "run-p lint",
-    "fix": "run-p fix",
+    "lint": "pnpm -r --parallel run lint",
+    "fix": "pnpm -r --parallel run fix",
     "pretest": "jest",
     "start": "pnpm build --watch",
-    "test": "run-p test",
+    "test": "pnpm -r --parallel run test",
     "pretest:ci": "pnpm pretest",
     "test:ci": "pnpm run test:ci --stream"
   },
