--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -20,18 +20,11 @@ jobs:
         uses: actions/checkout@v3
 
       - uses: pnpm/action-setup@v2
-        with:
-          version: 8.6.5
 
       - uses: actions/setup-node@v3
         with:
           node-version: '18'
-
-      - name: Set up pnpm cache
-        uses: actions/cache@v3
-        with:
-          path: ~/.pnpm-store
-          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+          cache: 'pnpm'
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
