--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,19 +24,12 @@ jobs:
     - uses: actions/checkout@v3
 
     - uses: pnpm/action-setup@v2
-      with:
-        version: 8.6.5
 
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-
-    - name: Set up pnpm cache
-      uses: actions/cache@v3
-      with:
-        path: ~/.pnpm-store
-        key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+        cache: 'pnpm'
 
     - run: pnpm install --fetch-timeout 900000 --frozen-lockfile
     - run: pnpm build
