--- a/packages/create-plugin/package.json
+++ b/packages/create-plugin/package.json
@@ -31,6 +31,7 @@
     "sort-package-json": "^1.57.0"
   },
   "devDependencies": {
+    "@prettier/sync": "^0.3.0",
     "@types/glob": "^8.1.0",
     "@types/inquirer": "^8.2.6",
     "@types/lodash": "^4.14.196",
