--- a/packages/create-plugin/package.json
+++ b/packages/create-plugin/package.json
@@ -31,14 +31,14 @@
     "sort-package-json": "^1.57.0"
   },
   "devDependencies": {
-    "@prettier/sync": "^0.3.0",
     "@types/glob": "^8.1.0",
     "@types/inquirer": "^8.2.6",
     "@types/lodash": "^4.14.196",
     "@types/node-rsa": "^1.1.1",
     "@types/normalize-path": "^3.0.0",
     "@types/rimraf": "^3.0.2",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "@prettier/sync": "^0.3.0"
   },
   "files": [
     "bin",
