--- a/packages/webpack-plugin-kintone-plugin/package.json
+++ b/packages/webpack-plugin-kintone-plugin/package.json
@@ -51,7 +51,7 @@
     "webpack": "^4.0.0 || ^5.0.0"
   },
   "dependencies": {
-    "@kintone/plugin-packer": "^7.0.4",
+    "@kintone/plugin-packer": "workspace:*",
     "mkdirp": "^3.0.1"
   }
 }
