--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,8 @@ jobs:
 
     strategy:
       matrix:
+        # TODO: replace to 20.x once Node 20.6 is fixed
+        # https://github.com/babel/babel/issues/15927
         node-version: [16.x, 18.x, 20.5]
         os: [ubuntu-latest, windows-latest]
 
