fix: add types to exports field in rest-api-client/package.json

--- a/packages/rest-api-client/package.json
+++ b/packages/rest-api-client/package.json
@@ -78,6 +78,11 @@
   },
   "exports": {
     ".": {
+      "types": {
+        "require": "./lib/src/index.d.ts",
+        "import": "./esm/src/index.d.ts",
+        "default": "./lib/src/index.d.ts"
+      },
       "node": {
         "import": "./index.mjs",
         "require": "./lib/src/index.js",
