--- a/packages/rest-api-client/package.json
+++ b/packages/rest-api-client/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "test-rest-api-client1",
-  "version": "5.0.12",
+  "name": "@kintone/rest-api-client",
+  "version": "5.0.0",
   "publishConfig": {
     "access": "public"
   },
