--- a/packages/rest-api-client/package.json
+++ b/packages/rest-api-client/package.json
@@ -62,17 +62,22 @@
     "@types/js-base64": "^3.0.0",
     "@types/mime": "^3.0.3",
     "@types/qs": "^6.9.9",
+    "@types/mime-types": "^2.1.3",
     "rollup": "^4.1.4",
     "rollup-plugin-ecma-version-validator": "^0.2.13",
     "rollup-plugin-license": "^3.2.0",
     "rollup-plugin-node-globals": "^1.4.0",
-    "rollup-plugin-polyfill-node": "^0.12.0"
+    "rollup-plugin-polyfill-node": "^0.12.0",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "babel-loader": "^9.1.3"
   },
   "dependencies": {
     "axios": "^1.5.1",
     "core-js": "^3.33.1",
     "form-data": "^4.0.0",
     "js-base64": "^3.7.5",
+    "mime-types": "^2.1.27",
     "mime": "^3.0.0",
     "qs": "^6.11.2"
   },
