--- a/packages/rest-api-client/package.json
+++ b/packages/rest-api-client/package.json
@@ -70,7 +70,8 @@
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "babel-loader": "^9.1.3",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "rimraf": "^5.0.5"
   },
   "dependencies": {
     "axios": "^1.6.0",
