--- a/packages/rest-api-client/tsconfig.build.esm.json
+++ b/packages/rest-api-client/tsconfig.build.esm.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "./tsconfig.build.json",
   "compilerOptions": {
     "module": "es2015",
     "outDir": "./esm",
