--- a/packages/rest-api-client/tsconfig.json
+++ b/packages/rest-api-client/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "extends": "../tsconfig-base.json",
   "compilerOptions": {
+    "noEmit": true,
     "target": "es5",
     "lib": ["es5", "es2015.promise", "es2015.iterable", "es2015.symbol", "es2015.symbol.wellknown", "dom"],
-    "outDir": "./lib",
     "rootDir": "./",
+    "outDir": "./lib",
     "typeRoots": [
       "node_modules/@types",
       "../../node_modules/@types",
@@ -13,4 +14,9 @@
     "resolveJsonModule": true
   },
   "include": ["src/**/*", "package.json"],
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    }
+  ]
 }
