refactor tsconfig files

--- a/packages/customize-uploader/tsconfig.json
+++ b/packages/customize-uploader/tsconfig.json
@@ -7,6 +7,6 @@
     "resolveJsonModule": true
   },
   "references": [
-    { "path": "../rest-api-client/tsconfig.build.json" }
+    { "path": "../rest-api-client" }
   ]
 }
