--- a/packages/rest-api-client/package.json
+++ b/packages/rest-api-client/package.json
@@ -15,7 +15,7 @@
   "types": "lib/src/index.d.ts",
   "scripts": {
     "prebuild": "pnpm clean",
-    "build": "tsc --build --force tsconfig.build.json",
+    "build": "tsc --build --force tsconfig.json",
     "postbuild": "run-p build:*",
     "lint": "eslint 'src/**/*.ts' --max-warnings 0",
     "prepublishOnly": "run-p build:umd_*",
@@ -23,7 +23,6 @@
     "test:ci": "jest --runInBand",
     "build:umd_dev": "rollup -c --environment BUILD:development",
     "build:umd_prod": "rollup -c --environment BUILD:production",
-    "build:esm": "tsc -p tsconfig.build.esm.json",
     "clean": "rimraf lib esm umd",
     "fix": "pnpm lint --fix",
     "start": "pnpm build --watch"
