--- a/packages/rest-api-client/tsconfig.build.esm.json
+++ b/packages/rest-api-client/tsconfig.build.esm.json
@@ -2,7 +2,6 @@
   "extends": "./tsconfig.build.json",
   "compilerOptions": {
     "module": "es2015",
-    "outDir": "./esm",
-    "composite": false
+    "outDir": "./esm"
   }
 }
