--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -9,7 +9,7 @@
     { "path": "./plugin-manifest-validator"},
     { "path": "./plugin-uploader"},
     { "path": "./profile-loader"},
-    { "path": "./rest-api-client/tsconfig.build.json" },
+    { "path": "./rest-api-client" },
     { "path": "./webpack-plugin-kintone-plugin"},
     { "path": "../examples/rest-api-client-demo"}
   ]
