--- a/packages/rest-api-client/tsconfig.typecheck.node.json
+++ b/packages/rest-api-client/tsconfig.typecheck.node.json
@@ -1,6 +1,7 @@
 {
   "extends": "./tsconfig.typecheck.json",
   "compilerOptions": {
+    // Excluding DOM APIs
     "lib": [
       "es5",
       "es2015.promise",
