refactor: update path and revert changes

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,8 +14,8 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x]
-        os: [windows-latest]
+        node-version: [18.x, 20.x]
+        os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
       - run: git config --global core.autocrlf false
