--- a/packages/rest-api-client/package.json
+++ b/packages/rest-api-client/package.json
@@ -70,6 +70,7 @@
     "rollup-plugin-polyfill-node": "^0.13.0",
     "rimraf": "^5.0.5",
     "vite": "^4.5.1",
+    "ts-loader": "^9.5.1",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   },
