--- a/.github/ISSUE_TEMPLATE/10-bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/10-bug-report.yml
@@ -1,5 +1,5 @@
 name: "🐛 Bug report"
-description: Report for reproducible bug of js-sdk
+description: Report a reproducible bug of js-sdk
 labels: ["bug"]
 title: "[Bug] "
 body:
