--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,13 +20,12 @@ jobs:
         id: release
         with:
           token: ${{ steps.create-iat.outputs.token }}
-          command: manifest
 
   publish:
     name: Publish to npm
     runs-on: ubuntu-latest
     needs: release
-    if: ${{ needs.release.outputs.releases_created }}
+    if: ${{ needs.release.outputs.releases_created == 'true' }}
     steps:
       - uses: actions/checkout@v4
 
