--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prebuild": "pnpm -r --parallel run prebuild",
     "build": "pnpm prebuild && tsc --build packages --force && pnpm postbuild",
     "postbuild": "pnpm -r --parallel run postbuild",
+    "license:analyze": "license-manager analyze",
     "lint": "run-s lint:*",
     "lint:workspace": "pnpm -r --parallel run lint",
     "lint:prettier": "prettier --check '**/*.{json,md,yml,yaml}'",
