--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prebuild": "pnpm -r --parallel run prebuild",
     "build": "pnpm prebuild && tsc --build packages --force && pnpm postbuild",
     "postbuild": "pnpm -r --parallel run postbuild",
+    "license:analyze": "license-manager analyze",
     "lint": "run-s lint:*",
     "lint:workspace": "pnpm -r --parallel run lint",
     "lint:prettier": "prettier --check '**/*.{json,md,yml,yaml}'",
@@ -36,6 +37,7 @@
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-typescript": "^7.23.3",
     "@cybozu/eslint-config": "^22.0.2",
+    "@cybozu/license-manager": "^1.1.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^18.19.14",
     "babel-jest": "^29.7.0",
