ci: add actions-timeline for inspection

--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -9,6 +9,7 @@ jobs:
       contents: read
       pull-requests: write
     steps:
+      - uses: Kesin11/actions-timeline@v2
       - uses: actions/labeler@v5
         with:
           repo-token: "${{ secrets.GITHUB_TOKEN }}"
