--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,10 +8,12 @@ on:
   pull_request:
 
 jobs:
-  build:
+  lint:
     name: Node.js ubuntu-latest 18.x
     runs-on: ubuntu-latest
     steps:
+      - uses: Kesin11/actions-timeline@v2
+
       - uses: actions/checkout@v4
 
       - uses: pnpm/action-setup@v2
