--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -11,6 +11,7 @@ jobs:
     name: Analyze the licenses
     runs-on: ubuntu-latest
     steps:
+      - uses: Kesin11/actions-timeline@v2
       - name: Check out repository
         uses: actions/checkout@v4
       - uses: pnpm/action-setup@v2
