--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,3 +43,9 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - run: pnpm build
       - run: pnpm -r publish
+
+  actions-timeline:
+    needs: [publish]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: Kesin11/actions-timeline@v2
