--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "license:analyze": "license-manager analyze",
     "lint": "run-s lint:*",
     "lint:workspace": "pnpm -r --parallel run lint",
-    "lint:prettier": "prettier --check '**/*.{json,md,yml,yaml}'",
+    "lint:prettier": "prettier --check '**/*.{json,md,yml,yaml}' --cache",
     "fix": "run-s fix:*",
     "fix:workspace": "pnpm -r --parallel run fix",
     "fix:prettier": "pnpm lint:prettier --write",
