fix(rest-api-client-demo): add npm, pnpm support in rest-api-client-demo

--- a/examples/rest-api-client-demo/package.json
+++ b/examples/rest-api-client-demo/package.json
@@ -21,7 +21,7 @@
     "lint": "run-p -l lint:*",
     "deploy": "rimraf scripts/dist && run-s webpack upload",
     "upload": "kintone-customize-uploader customize-manifest.json",
-    "run-script": "ts-node src/run-node.ts",
+    "demo": "ts-node src/run-node.ts",
     "webpack": "webpack"
   },
   "bugs": {
