--- a/packages/plugin-uploader/package.json
+++ b/packages/plugin-uploader/package.json
@@ -45,10 +45,9 @@
     "inquirer": "^8.2.6",
     "meow": "^9.0.0",
     "os-locale": "^5.0.0",
-    "puppeteer": "^22.4.1"
+    "puppeteer": "^21.7.0"
   },
   "devDependencies": {
-    "@types/inquirer": "8.2.10",
-    "@types/puppeteer": "^5.4.7"
+    "@types/inquirer": "8.2.10"
   }
 }
