--- a/examples/rest-api-client-demo/package.json
+++ b/examples/rest-api-client-demo/package.json
@@ -13,7 +13,8 @@
     "directory": "examples/rest-api-client-demo"
   },
   "scripts": {
-    "prebuild": "rimraf dist",
+    "prebuild": "npm run clean",
+    "clean": "rimraf dist",
     "build": "tsc --build",
     "fix": "npm run lint:eslint -- --fix",
     "lint:eslint": "eslint 'src/**/*.ts' --max-warnings 0",
