feat: allow and recommend developers to set  property to manifest.json

--- a/packages/plugin-manifest-validator/examples/manifest.json
+++ b/packages/plugin-manifest-validator/examples/manifest.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "./node_modules/@kintone/plugin-manifest-validator/manifest-schema.json",
   "manifest_version": 1,
   "version": 1,
   "type": "APP",
