--- a/packages/create-plugin/templates/minimum/package.json
+++ b/packages/create-plugin/templates/minimum/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@cybozu/eslint-config": "^23.0.0",
     "@kintone/plugin-packer": "^8.0.6",
+    "@kintone/plugin-manifest-validator": "^10.1.0",
     "eslint": "^8.57.0"
   }
 }
