--- a/packages/create-plugin/templates/modern/package.json
+++ b/packages/create-plugin/templates/modern/package.json
@@ -21,6 +21,7 @@
     "@cybozu/eslint-config": "^23.0.0",
     "@kintone/dts-gen": "^8.0.11",
     "@kintone/webpack-plugin-kintone-plugin": "^8.0.8",
+    "@kintone/plugin-manifest-validator": "^10.1.0",
     "ajv": "^8.12.0",
     "babel-loader": "^9.1.3",
     "cross-env": "^7.0.3",
