--- a/packages/plugin-manifest-validator/package.json
+++ b/packages/plugin-manifest-validator/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "ajv": "^8.12.0",
+    "ajv-formats": "^2.1.1",
     "bytes": "^3.1.2"
   },
   "devDependencies": {
