--- a/packages/plugin-manifest-validator/examples/manifest.json
+++ b/packages/plugin-manifest-validator/examples/manifest.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://raw.githubusercontent.com/kintone/js-sdk/main/packages/plugin-manifest-validator/manifest-schema.json",
   "manifest_version": 1,
   "version": 1,
   "type": "APP",
