--- a/package.json
+++ b/package.json
@@ -39,11 +39,14 @@
     "@babel/preset-typescript": "^7.24.1",
     "@cybozu/eslint-config": "^23.0.0",
     "@cybozu/license-manager": "^1.2.1",
+    "@eslint/compat": "^1.0.3",
+    "@eslint/eslintrc": "^3.1.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^18.19.33",
+    "@typescript-eslint/eslint-plugin": "^7.11.0",
     "babel-jest": "^29.7.0",
     "comment-json": "^4.2.3",
-    "eslint": "^9.3.0",
+    "eslint": "^9.4.0",
     "jest": "^29.7.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
