--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
     "rimraf": "^5.0.7",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "globals": "^15.4.0"
   },
   "packageManager": "pnpm@8.15.8",
   "pnpm": {
