--- a/package.json
+++ b/package.json
@@ -57,7 +57,11 @@
   "pnpm": {
     "overrides": {
       "follow-redirects@<1.15.4": ">=1.15.4",
-      "browserify-sign@<4.2.2": ">=4.2.2"
+      "browserify-sign@<4.2.2": ">=4.2.2",
+      "braces": ">=3.0.3",
+      "pac-resolver": ">=7.0.1",
+      "socks": ">=2.8.3",
+      "express": ">=4.19.2"
     }
   }
 }
