chore: change commit type from fix to chore

--- a/renovate.json5
+++ b/renovate.json5
@@ -18,6 +18,16 @@
     ],
     packageRules: [
       {
+        // set `chore` to the commit for updating deps and devDeps
+        matchPackagePatterns: [
+          "*"
+        ],
+        matchDepTypes: [
+          "devDependencies"
+        ],
+        semanticCommitType: "chore",
+      },
+      {
         // automerge minor updates of devDependencies
         matchPackagePatterns: [
           "*"
