--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
       "braces": ">=3.0.3",
       "pac-resolver": ">=7.0.1",
       "socks": ">=2.8.3",
-      "express": ">=4.19.2"
+      "express": ">=4.19.2",
+      "ws": ">=8.17.1"
     }
   }
 }
