chore: change commit type from fix to chore (#2891)

--- a/renovate.json5
+++ b/renovate.json5
@@ -18,6 +18,13 @@
     ],
     packageRules: [
       {
+        // set `chore` to the commit for updating packages
+        matchPackagePatterns: [
+          "*"
+        ],
+        semanticCommitType: "chore",
+      },
+      {
         // automerge minor updates of devDependencies
         matchPackagePatterns: [
           "*"
