--- a/packages/plugin-uploader/package.json
+++ b/packages/plugin-uploader/package.json
@@ -41,8 +41,8 @@
   },
   "homepage": "https://github.com/kintone/js-sdk/tree/main/packages/plugin-uploader#readme",
   "dependencies": {
+    "@inquirer/prompts": "^5.3.7",
     "chalk": "^4.1.2",
-    "inquirer": "^10.1.8",
     "meow": "^9.0.0",
     "os-locale": "^5.0.0",
     "puppeteer": "^22.13.1"
