--- a/packages/dts-gen/package.json
+++ b/packages/dts-gen/package.json
@@ -28,7 +28,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@cybozu/eslint-config": "^23.0.0",
+    "@cybozu/eslint-config": "^24.0.0-beta.0",
     "axios": "^1.7.7",
     "commander": "^12.1.0",
     "eslint": "^9.13.0",
@@ -37,7 +37,7 @@
     "prettier": "^3.3.3"
   },
   "devDependencies": {
-    "@types/eslint": "^8.56.12",
+    "@types/eslint": "^9.6.1",
     "@types/lodash": "^4.17.12",
     "ts-loader": "^9.5.1",
     "webpack": "^5.95.0",
