chore: update eslint config to flat config in template

--- a/packages/create-plugin/templates/modern/package.json
+++ b/packages/create-plugin/templates/modern/package.json
@@ -18,7 +18,7 @@
     "@babel/preset-env": "^7.25.8",
     "@babel/preset-react": "^7.25.7",
     "@babel/preset-typescript": "^7.25.7",
-    "@cybozu/eslint-config": "^23.0.0",
+    "@cybozu/eslint-config": "^24.0.0-beta.0",
     "@kintone/dts-gen": "^8.0.13",
     "@kintone/webpack-plugin-kintone-plugin": "^8.0.10",
     "ajv": "^8.17.1",
