--- a/packages/create-plugin/templates/minimum/package.json
+++ b/packages/create-plugin/templates/minimum/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint src"
   },
   "devDependencies": {
-    "@cybozu/eslint-config": "^23.0.0",
+    "@cybozu/eslint-config": "^24.0.0-beta.0",
     "@kintone/plugin-packer": "^8.1.3",
     "eslint": "^9.13.0"
   }
