--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
       "pac-resolver": ">=7.0.1",
       "socks": ">=2.8.3",
       "express": ">=4.19.2",
-      "ws": ">=8.18.0"
+      "ws": ">=8.18.0",
+      "body-parser": ">=1.20.3"
     }
   }
 }
