--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
       "socks": ">=2.8.3",
       "express": ">=4.19.2",
       "ws": ">=8.18.0",
+      "body-parser": ">=1.20.3",
       "cross-spawn": ">=7.0.5"
     }
   }
