--- a/packages/eslint-plugin/package.json
+++ b/packages/eslint-plugin/package.json
@@ -25,8 +25,7 @@
   "type": "module",
   "files": [
     "CHANGELOG.md",
-    "lib",
-    "!**/*.tsbuildinfo"
+    "lib"
   ],
   "main": "lib/index.js",
   "exports": {
@@ -38,7 +37,7 @@
   "scripts": {
     "prebuild": "pnpm clean",
     "build": "tsc --build ./tsconfig.build.json",
-    "start": "run-s clean 'build -- --watch'",
+    "start": "run-s clean 'build --watch'",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:ci": "vitest run",
