--- a/packages/eslint-plugin/tsconfig.json
+++ b/packages/eslint-plugin/tsconfig.json
@@ -10,7 +10,7 @@
 
     /* Modules */
     "module": "Node16" /* Specify what module code is generated. */,
-    "rootDir": "./src" /* Specify the root folder within your source files. */,
+    // "rootDir": "./src" /* Specify the root folder within your source files. */,
     "moduleResolution": "Node16" /* Specify how TypeScript looks up a file from a given module specifier. */,
     "noUncheckedSideEffectImports": true /* Check side effect imports. */,
     "resolveJsonModule": true /* Enable importing .json files. */,
