--- a/packages/eslint-plugin/tsconfig.typecheck.json
+++ b/packages/eslint-plugin/tsconfig.typecheck.json
@@ -4,7 +4,8 @@
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
     /* Projects */
-    "composite": true /* Enable constraints that allow a TypeScript project to be used with project references. */
+    "composite": true /* Enable constraints that allow a TypeScript project to be used with project references. */,
+    "tsBuildInfoFile": "./node_modules/.cache/.typecheck.tsbuildinfo" /* Specify the path to .tsbuildinfo incremental compilation file. */
   },
   "include": ["src", "tests", "vitest.config.ts"]
 }
