--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,9 @@ jobs:
 
   publish:
     name: Publish to npm
+    permissions:
+      contents: read
+      id-token: write
     runs-on: ubuntu-latest
     needs: release
     if: ${{ needs.release.outputs.releases_created == 'true' }}
