chore(rest): add engines field to package.json

--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -9,6 +9,9 @@
   "keywords": [
     "kintone"
   ],
+  "engines": {
+    "node": ">=18"
+  },
   "author": {
     "name": "Cybozu, Inc.",
     "url": "https://cybozu.co.jp"
