feat(rest): add implementations of the rest package

--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -1,11 +1,20 @@
 {
   "name": "@kintone/rest",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "lib/src/index.js",
+  "module": "esm/src/index.js",
+  "types": "lib/src/index.d.ts",
   "scripts": {
+    "prebuild": "pnpm clean",
+    "build": "tsc --build --force && cp -R src/schemas lib/src/schemas",
+    "clean": "rimraf lib esm umd",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "files": [
+    "esm",
+    "lib"
+  ],
   "keywords": [
     "kintone"
   ],
@@ -16,5 +25,10 @@
     "name": "Cybozu, Inc.",
     "url": "https://cybozu.co.jp"
   },
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "dependencies": {
+    "openapi-fetch": "^0.13.4",
+    "openapi-typescript": "^7.6.0",
+    "openapi-typescript-helpers": "^0.0.15"
+  }
 }
