--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -1,13 +1,15 @@
 {
   "name": "@kintone/rest",
   "version": "0.0.1",
-  "description": "",
+  "description": "kintone REST API Client for JavaScript",
   "main": "lib/src/index.js",
   "module": "esm/src/index.js",
   "types": "lib/src/index.d.ts",
   "scripts": {
     "prebuild": "pnpm clean",
-    "build": "tsc --build --force && cp -R src/schemas lib/src/schemas",
+    "build": "pnpm build:lib && pnpm build:esm",
+    "build:lib": "tsc --build ./tsconfig.build.lib.json && cp -R src/schemas lib/src/schemas",
+    "build:esm": "tsc --build ./tsconfig.build.esm.json && cp -R src/schemas esm/src/schemas",
     "clean": "rimraf lib esm umd",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
