--- a/packages/rest/tsconfig.build.esm.json
+++ b/packages/rest/tsconfig.build.esm.json
@@ -4,6 +4,7 @@
     "target": "es2022",
     "lib": ["es2022"],
     "module": "es2022",
+    "noEmit": false,
     "outDir": "./esm"
   },
   "include": ["src/**/*", "package.json"],
