--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -10,6 +10,7 @@
     { "path": "./plugin-manifest-validator"},
     { "path": "./plugin-uploader"},
     { "path": "./profile-loader"},
+    { "path":  "./rest" },
     { "path": "./rest-api-client" },
     { "path": "./webpack-plugin-kintone-plugin"},
   ]
