--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -17,6 +17,18 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
+      - name: Checkout kintone/rest-api-spec
+        uses: actions/checkout@v4
+        with:
+          repository: kintone/rest-api-spec
+          ref: main
+          path: rest-api-spec
+
+      - name: Start mock server
+        run: |
+          npx prism mock rest-api-spec/kintone/$(ls rest-api-spec/kintone | sort | tail -n 1)/openapi.yaml &
+          npx wait-on -t 60s tcp:127.0.0.1:4010
+
       - run: git config --global core.autocrlf false
       - uses: actions/checkout@v4
 
