--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -12,8 +12,9 @@
     "lint": "eslint . --max-warnings 0",
     "fix": "pnpm lint --fix",
     "clean": "rimraf lib esm umd",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "test:ci": "echo \"TODO: no test specified\""
+    "test": "jest",
+    "test:ci": "jest --runInBand",
+    "test:e2e": "jest --config=jest.e2e.config.js"
   },
   "files": [
     "CHANGELOG.md",
