chore(rest): use token

--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -23,6 +23,7 @@ jobs:
           repository: kintone/rest-api-spec
           ref: main
           path: rest-api-spec
+          token: ${{ secrets.REST_API_SPEC_TOKEN }}
 
       - name: Start mock server
         run: |
