feat(rest): setup platform deps

--- a/packages/rest/tsconfig.build.lib.json
+++ b/packages/rest/tsconfig.build.lib.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "target": "es2018",
-    "lib": ["es2018"],
+    "lib": ["es2018", "dom"],
     "noEmit": false,
     "outDir": "./lib"
   },
