--- a/packages/rest/tsconfig.build.esm.json
+++ b/packages/rest/tsconfig.build.esm.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "target": "es2022",
-    "lib": ["es2022"],
+    "lib": ["es2022", "dom"],
     "module": "es2022",
     "noEmit": false,
     "outDir": "./esm"
