feat(rest): (wip) build umd

--- a/packages/rest/tsconfig.json
+++ b/packages/rest/tsconfig.json
@@ -23,6 +23,9 @@
       "path": "./tsconfig.build.esm.json"
     },
     {
+      "path": "./tsconfig.build.umd.json"
+    },
+    {
       "path": "./tsconfig.typecheck.json"
     }
   ]
